--- a/Vliegtuig/src/main/resources/static/index.html
+++ b/Vliegtuig/src/main/resources/static/index.html
@@ -7,6 +7,8 @@
 <body>
 Vliegtuigen datatable:
 <button onclick="refreshTable()"> Get Data </button>
+<button onclick="fillListbox()"> Vul vliegtuig listbox </button>
+
 
 <table id="vliegtuigTable" class="display" width="100%">
     <thead>
@@ -16,6 +18,14 @@ Vliegtuigen datatable:
     </tr>
     </thead>
 </table>
+
+Lijst met vliegtuigen:
+<select id="vliegtuiglistbox">
+
+</select>
+Vul brandstof bij:
+<button onclick="fillPlaneFuel()"> Fill fuel </button>
+
 
 <script
         src="https://code.jquery.com/jquery-3.3.1.min.js"
