--- a/Vliegtuig/src/main/resources/static/index.html
+++ b/Vliegtuig/src/main/resources/static/index.html
@@ -19,12 +19,31 @@ Vliegtuigen datatable:
     </thead>
 </table>
 
-Lijst met vliegtuigen:
+
+<h1>Vul brandstof bij en vlieg naar een bestemming:</h1>
+
+Vlieg vliegtuig van vliegveld A naar vliegveld B en verlaag brandstof met 2000
+<br />
+<br />
+Kies vliegtuig:<br />
+Lijst met vliegtuigen:<br />
 <select id="vliegtuiglistbox">
 
+
 </select>
-Vul brandstof bij:
+<br />
+<br />
 <button onclick="fillPlaneFuel()"> Fill fuel </button>
+<br />
+
+<br /><br />
+Kies eindbestemming vliegveld:<br />
+<select id="vliegveldlistbox">
+
+</select>
+
+
+
 
 
 <script
