--- a/Vliegtuig/src/main/resources/static/index.html
+++ b/Vliegtuig/src/main/resources/static/index.html
@@ -40,7 +40,11 @@ Lijst met vliegtuigen:<br />
 Kies eindbestemming vliegveld:<br />
 <select id="vliegveldlistbox">
 
+
 </select>
+<br />
+<br />
+<button onclick="vliegvliegtuig()"> Vlieg vliegtuig naar eindbestemming </button>
 
 
 
